# Vet-Research-Manuscript-Lab

./: .env.example  .gitignore  AGENT.md  DEVELOPMENT.md  IDEA.md  README.md  _verify_search.py  agent_contracts.md  alembic.ini  domain_model.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/adr/: 0001-python-312-and-src-layout.md  0002-structured-immutable-artifacts.md  0003-langgraph-state-boundary.md  0004-human-approval-and-scope-locks.md  0005-relational-literature-evidence-tables.md  README.md  (+5 more)
migrations/: env.py
tests/: test_analysis_graph.py  test_analysis_policy.py  test_argument_spine.py  test_artifact_store.py  test_checkpoint_backend.py  test_compliance_graph.py  test_compliance_policy.py  test_config.py  test_conventions.py  test_database.py  test_database_backends.py  test_documents.py  test_docx_renderer.py  test_evidence_pipeline.py  test_evidence_type_schema.py  test_external_integration.py  test_foundation_graph.py  test_foundation_policy.py  test_golden_project.py  test_governance_repository.py  test_i18n.py  test_literature_evidence.py  test_literature_graph.py  test_migrations.py  test_model_gateway.py  test_privacy.py  test_retrieval.py  test_review_queue.py  test_run_mode.py  test_statistical_validation.py  test_stress_citation.py  test_stress_data.py  test_stress_pdf.py  test_stress_writing.py  test_workflow_state.py  test_workflow_state_schema.py  test_writing_graph.py  test_writing_policy.py  test_zotero.py
tools/: bootstrap.ps1  check.ps1  run-streamlit.ps1
(+117 files in other folders)
