[build-system]
requires = ["setuptools>=81"]
build-backend = "setuptools.build_meta"

[project]
name = "vet-research-manuscript-lab"
version = "0.1.0.dev0"
description = "Auditable human-in-the-loop veterinary manuscript workflow"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Vet Research Manuscript Lab contributors" }]
dependencies = [
  "alembic>=1.14,<2",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=2,<4",
  "sqlalchemy>=2.0,<3",
  "streamlit>=1.45,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# CJK translation catalog uses fullwidth punctuation legitimately
"src/vet_manuscript_lab/ui/i18n.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["vet_manuscript_lab"]
mypy_path = "src"

